--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\Lucas_ccujizf\\AppData\\Local\\Programs\\Python\\Python38\\python.exe"
+    "python.pythonPath": "/home/lucas/anaconda3/bin/python"
 }
