--- a/RAS_TESTE_SCREEN/Tela/.vscode/settings.json
+++ b/RAS_TESTE_SCREEN/Tela/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "D:\\Users\\Lucas\\OneDrive\\Documentos\\UNESP\\RAS\\Libras\\virtualenv\\librasenv\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\irisg\\anaconda3\\python.exe"
 }
